force-app/main/default/objects/External_Service_API_Key__mdt/External_Service_API_Key__mdt.object-meta.xml
<CustomObject>
    <description>The main purpose is to store API Keys for the External Systems</description>
    <label>External Service API Key</label>
    <pluralLabel>External Service API Keys</pluralLabel>
</CustomObject>