force-app/main/default/objects/External_Service_API_Key__mdt/fields/Api__c.field-meta.xml
<CustomField>
    <fullName>Api__c</fullName>
    <label>Api</label>
    <length>180</length>
    <type>Text</type>
</CustomField>