force-app/main/default/objects/External_Service_API_Key__mdt/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <length>180</length>
    <type>Text</type>
</CustomField>