force-app/main/default/objects/External_Service_API_Key__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <length>180</length>
    <type>Text</type>
</CustomField>