force-app/main/default/objects/External_Service_API_Key__mdt/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <length>180</length>
    <type>Text</type>
</CustomField>